2021-11-28  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.mi-json/mi-json.c (J_UND): Define.
	(test_val_to_json): Return J_UND if json_object_equal is not
	available.
	(test_json_file): Mark test as `unresolved' whenever appropriate.
	* poke/pk-mi-json.c (pk_json_object_object_add): Fix return value.

2021-11-26  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-mi-json.c (pk_json_object_object_add): Define.
	(JSON_OBJECT_OBJECT_ADD): Use pk_json_object_object_add.
	(collect_msg_arg): Likewise.
	(pk_mi_msg_to_json_object): Likewise.

2021-11-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/pktest.pk (PkTest): Use logical implication operator.

2021-11-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* doc/learn-poke-language-in-y-minutes.pk
	(Logical implication operator): Add new section.
	(format): Likewise.
	(Signed Arithmetic Overflow Detection): Add a newline to `print`.

2021-11-19  Kostas Chasialis  <koschasialis@gmail.com>

	* etc/pk-mi-json-schema.json (JSON Schema): Refactored the JSON schema.
	* libpoke/libpoke.h (pk_sizeof): Function declaration.
	* libpoke/pk-val.c (pk_sizeof): Function definition.
	* poke/pk-mi-json.c (pk_val_to_json): New function.
	(pk_type_to_json): Likewise.
	(pk_type_to_json_integral): Likewise.
	(pk_type_to_json_string): Likewise.
	(pk_type_to_json_offset): Likewise.
	(pk_type_to_json_struct): Likewise.
	(pk_type_to_json_array): Likewise.
	(pk_type_to_json_any): Likewise.
	(pk_type_to_json_null): Likewise.
	(pk_val_to_json_int): Likewise.
	(pk_val_to_json_uint): Likewise.
	(pk_val_to_json_string): Likewise.
	(pk_val_to_json_offset): Likewise.
	(pk_val_to_json_struct): Likewise.
	(pk_val_to_json_array): Likewise.
	(pk_val_to_json_any): Likewise.
	(pk_val_to_json_map): Likewise.
	(json_to_pk_val): Likewise.
	(json_to_pk_type): Likewise.
	(json_to_pk_type_integral): Likewise.
	(json_to_pk_type_offset): Likewise.
	(json_to_pk_type_struct): Likewise.
	(json_to_pk_type_array): Likewise.